[gd_scene load_steps=26 format=3 uid="uid://by1rijuqycrc7"]

[ext_resource type="Script" path="res://scripts/HeadPlayer.gd" id="1_jfxk0"]
[ext_resource type="Script" path="res://scripts/HeadRotationHelper.gd" id="2_nqthj"]
[ext_resource type="Script" path="res://scripts/Movement.gd" id="2_vpbsq"]
[ext_resource type="Script" path="res://scripts/AvoidCollisionArm.gd" id="3_7vi1f"]
[ext_resource type="Script" path="res://scripts/ArmPlayer.gd" id="4_68ipt"]
[ext_resource type="Script" path="res://scenes/others/TargetIK.gd" id="4_pwwrm"]
[ext_resource type="Script" path="res://scripts/Articulation.gd" id="5_qjvo7"]
[ext_resource type="PackedScene" uid="uid://dpnhem1y8n7r7" path="res://particles/Blood.tscn" id="6_mmb24"]
[ext_resource type="Texture2D" uid="uid://criwv6nuivcxy" path="res://icon.svg" id="7_drxmw"]
[ext_resource type="Script" path="res://scripts/Config.gd" id="8_uxme2"]
[ext_resource type="AudioStream" uid="uid://dck5gojnl86b5" path="res://sounds/ImpactMetal.wav" id="9_s1nsl"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_myyca"]
radius = 161.0
height = 372.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uneet"]
size = Vector2(225, 225)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_q7gf2"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_qeu63"]
friction = 0.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0qx4j"]
size = Vector2(225, 300)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o4hkd"]
size = Vector2(125, 700)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t10w1"]
size = Vector2(99, 76)

[sub_resource type="SkeletonModification2DTwoBoneIK" id="SkeletonModification2DTwoBoneIK_5jo0p"]
target_nodepath = NodePath("../Target1")
joint_one_bone_idx = 1
joint_one_bone2d_node = NodePath("Base/Leg1")
joint_two_bone_idx = 2
joint_two_bone2d_node = NodePath("Base/Leg1/Leg2")

[sub_resource type="SkeletonModification2DTwoBoneIK" id="SkeletonModification2DTwoBoneIK_tvu1h"]
target_nodepath = NodePath("../Target2")
joint_one_bone_idx = 4
joint_one_bone2d_node = NodePath("Base/Leg3")
joint_two_bone_idx = 5
joint_two_bone2d_node = NodePath("Base/Leg3/Leg4")

[sub_resource type="SkeletonModificationStack2D" id="SkeletonModificationStack2D_ug7ca"]
enabled = true
modification_count = 2
modifications/0 = SubResource("SkeletonModification2DTwoBoneIK_5jo0p")
modifications/1 = SubResource("SkeletonModification2DTwoBoneIK_tvu1h")

[sub_resource type="CapsuleMesh" id="CapsuleMesh_3dcq6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i2hbv"]
size = Vector2(125, 400)

[sub_resource type="CircleShape2D" id="CircleShape2D_tyxmv"]
radius = 78.0

[sub_resource type="SphereMesh" id="SphereMesh_fjaxu"]

[node name="Player" type="Node2D"]

[node name="Head" type="RigidBody2D" parent="."]
position = Vector2(0, -789)
mass = 5.0
lock_rotation = true
script = ExtResource("1_jfxk0")

[node name="HeadRotationHelper" type="Node2D" parent="Head"]
top_level = true
position = Vector2(0, 789)
script = ExtResource("2_nqthj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Head"]
position = Vector2(0, 3.00003)
shape = SubResource("CapsuleShape2D_myyca")

[node name="Line2D" type="Line2D" parent="Head"]
points = PackedVector2Array(0, 30, 0, -25)
width = 325.0
default_color = Color(1, 0.882353, 0.792157, 1)
begin_cap_mode = 2
end_cap_mode = 2

[node name="Line2D3" type="Line2D" parent="Head"]
position = Vector2(-13, -7)
points = PackedVector2Array(137, -68, 137, -43)
width = 60.0
begin_cap_mode = 2
end_cap_mode = 2

[node name="Line2D3" type="Line2D" parent="Head/Line2D3"]
position = Vector2(54, -20)
scale = Vector2(0.7, 0.7)
points = PackedVector2Array(137, -68, 137, -43)
width = 50.0
default_color = Color(0, 0, 0, 1)
begin_cap_mode = 2
end_cap_mode = 2

[node name="Camera2D" type="Camera2D" parent="Head"]
offset = Vector2(0, 700)
zoom = Vector2(0.3, 0.3)
position_smoothing_enabled = true

[node name="Body1" type="RigidBody2D" parent="."]
position = Vector2(0, -488)
mass = 20.0
lock_rotation = true
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body1"]
shape = SubResource("RectangleShape2D_uneet")

[node name="MeshInstance2D" type="MeshInstance2D" parent="Body1"]
modulate = Color(0.207843, 0.878431, 0.615686, 1)
position = Vector2(-0.5, 33)
scale = Vector2(227, 146)
mesh = SubResource("CapsuleMesh_q7gf2")

[node name="Body2" type="RigidBody2D" parent="."]
position = Vector2(0, -263)
mass = 13.0
lock_rotation = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body2"]
shape = SubResource("RectangleShape2D_uneet")

[node name="MeshInstance2D" type="MeshInstance2D" parent="Body2"]
modulate = Color(0.207843, 0.878431, 0.615686, 1)
position = Vector2(-0.5, 9.00002)
scale = Vector2(227, 210)
mesh = SubResource("CapsuleMesh_q7gf2")

[node name="Body3" type="RigidBody2D" parent="."]
position = Vector2(0, -1)
mass = 13.5
physics_material_override = SubResource("PhysicsMaterial_qeu63")
lock_rotation = true
script = ExtResource("2_vpbsq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body3"]
shape = SubResource("RectangleShape2D_0qx4j")

[node name="MeshInstance2D" type="MeshInstance2D" parent="Body3"]
modulate = Color(0.207843, 0.878431, 0.615686, 1)
position = Vector2(-0.5, -34)
scale = Vector2(227, 213)
mesh = SubResource("CapsuleMesh_q7gf2")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Body3"]
position = Vector2(0.5, 500)
shape = SubResource("RectangleShape2D_o4hkd")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Body3"]
position = Vector2(112.5, 812)
shape = SubResource("RectangleShape2D_t10w1")

[node name="Legs" type="Node2D" parent="Body3"]
position = Vector2(0, 1)

[node name="Skeleton2D" type="Skeleton2D" parent="Body3/Legs"]
position = Vector2(0, 60)
modification_stack = SubResource("SkeletonModificationStack2D_ug7ca")

[node name="Base" type="Bone2D" parent="Body3/Legs/Skeleton2D"]
rest = Transform2D(1, 0, 0, 1, 0, 0)

[node name="Leg1" type="Bone2D" parent="Body3/Legs/Skeleton2D/Base"]
rest = Transform2D(1, 0, 0, 1, 0, 0)

[node name="Leg2" type="Bone2D" parent="Body3/Legs/Skeleton2D/Base/Leg1"]
position = Vector2(0, 364)
rest = Transform2D(1, 0, 0, 1, 0, 364)

[node name="Foot" type="Bone2D" parent="Body3/Legs/Skeleton2D/Base/Leg1/Leg2"]
position = Vector2(0, 387)
rest = Transform2D(1, 0, 0, 1, 0, 387)

[node name="Leg2" type="Node2D" parent="Body3/Legs/Skeleton2D/Base/Leg1/Leg2"]
z_index = -1
position = Vector2(0, 212)

[node name="ColorRect" type="ColorRect" parent="Body3/Legs/Skeleton2D/Base/Leg1/Leg2/Leg2"]
modulate = Color(0.258824, 0.529412, 0.721569, 1)
offset_left = -62.0
offset_top = -213.0
offset_right = 62.0
offset_bottom = 212.0
color = Color(0, 0.145098, 0.352941, 1)

[node name="ColorRect2" type="ColorRect" parent="Body3/Legs/Skeleton2D/Base/Leg1/Leg2/Leg2"]
modulate = Color(0.258824, 0.529412, 0.721569, 1)
offset_left = -62.0
offset_top = 137.0
offset_right = 162.0
offset_bottom = 212.0
color = Color(0, 0, 0, 1)

[node name="MeshInstance2D" type="MeshInstance2D" parent="Body3/Legs/Skeleton2D/Base/Leg1/Leg2/Leg2"]
modulate = Color(0, 0.145098, 0.352941, 1)
position = Vector2(0.5, -134)
scale = Vector2(125, 125)
mesh = SubResource("CapsuleMesh_3dcq6")

[node name="RayCast2D" type="RayCast2D" parent="Body3/Legs/Skeleton2D/Base/Leg1/Leg2/Leg2"]
position = Vector2(50, 213)
scale = Vector2(160, 160)
target_position = Vector2(0, 1)

[node name="RayCast2D2" type="RayCast2D" parent="Body3/Legs/Skeleton2D/Base/Leg1/Leg2/Leg2"]
position = Vector2(50, 175)
rotation = 1.5708
scale = Vector2(160, 160)
target_position = Vector2(0, 1)

[node name="RayCast2D3" type="RayCast2D" parent="Body3/Legs/Skeleton2D/Base/Leg1/Leg2/Leg2"]
position = Vector2(62, 175)
rotation = -1.5708
scale = Vector2(160, 160)
target_position = Vector2(0, 1)

[node name="Leg1" type="Node2D" parent="Body3/Legs/Skeleton2D/Base/Leg1"]
z_index = -1
position = Vector2(0, 164)

[node name="ColorRect" type="ColorRect" parent="Body3/Legs/Skeleton2D/Base/Leg1/Leg1"]
modulate = Color(0.258824, 0.529412, 0.721569, 1)
offset_left = -62.0
offset_top = -200.0
offset_right = 62.0
offset_bottom = 200.0
color = Color(0, 0.145098, 0.352941, 1)

[node name="MeshInstance2D" type="MeshInstance2D" parent="Body3/Legs/Skeleton2D/Base/Leg1/Leg1"]
modulate = Color(0, 0.145098, 0.352941, 1)
position = Vector2(0.5, -134)
scale = Vector2(125, 125)
mesh = SubResource("CapsuleMesh_3dcq6")

[node name="MeshInstance2D2" type="MeshInstance2D" parent="Body3/Legs/Skeleton2D/Base/Leg1/Leg1"]
modulate = Color(0, 0.145098, 0.352941, 1)
position = Vector2(0.5, 138)
scale = Vector2(125, 125)
mesh = SubResource("CapsuleMesh_3dcq6")

[node name="Leg3" type="Bone2D" parent="Body3/Legs/Skeleton2D/Base"]
rest = Transform2D(1, 0, 0, 1, 0, 0)

[node name="Leg4" type="Bone2D" parent="Body3/Legs/Skeleton2D/Base/Leg3"]
position = Vector2(0, 364)
rest = Transform2D(1, 0, 0, 1, 0, 364)

[node name="Foot" type="Bone2D" parent="Body3/Legs/Skeleton2D/Base/Leg3/Leg4"]
position = Vector2(0, 387)
rest = Transform2D(1, 0, 0, 1, 0, 387)

[node name="Leg4" type="Node2D" parent="Body3/Legs/Skeleton2D/Base/Leg3/Leg4"]
modulate = Color(0.8, 0.8, 0.8, 1)
z_index = -2
position = Vector2(0, 212)

[node name="ColorRect" type="ColorRect" parent="Body3/Legs/Skeleton2D/Base/Leg3/Leg4/Leg4"]
modulate = Color(0.184314, 0.411765, 0.572549, 1)
offset_left = -62.0
offset_top = -213.0
offset_right = 62.0
offset_bottom = 212.0
color = Color(0, 0.145098, 0.352941, 1)

[node name="ColorRect2" type="ColorRect" parent="Body3/Legs/Skeleton2D/Base/Leg3/Leg4/Leg4"]
modulate = Color(0.184314, 0.411765, 0.572549, 1)
offset_left = -62.0
offset_top = 137.0
offset_right = 162.0
offset_bottom = 212.0
color = Color(0, 0, 0, 1)

[node name="MeshInstance2D" type="MeshInstance2D" parent="Body3/Legs/Skeleton2D/Base/Leg3/Leg4/Leg4"]
modulate = Color(0, 0.145098, 0.352941, 1)
position = Vector2(0.5, -134)
scale = Vector2(125, 125)
mesh = SubResource("CapsuleMesh_3dcq6")

[node name="RayCast2D" type="RayCast2D" parent="Body3/Legs/Skeleton2D/Base/Leg3/Leg4/Leg4"]
position = Vector2(50, 213)
scale = Vector2(160, 160)
target_position = Vector2(0, 1)

[node name="RayCast2D2" type="RayCast2D" parent="Body3/Legs/Skeleton2D/Base/Leg3/Leg4/Leg4"]
position = Vector2(50, 175)
rotation = 1.5708
scale = Vector2(160, 160)
target_position = Vector2(0, 1)

[node name="RayCast2D3" type="RayCast2D" parent="Body3/Legs/Skeleton2D/Base/Leg3/Leg4/Leg4"]
position = Vector2(62, 175)
rotation = -1.5708
scale = Vector2(160, 160)
target_position = Vector2(0, 1)

[node name="Leg3" type="Node2D" parent="Body3/Legs/Skeleton2D/Base/Leg3"]
modulate = Color(0.8, 0.8, 0.8, 1)
z_index = -2
position = Vector2(0, 164)

[node name="ColorRect" type="ColorRect" parent="Body3/Legs/Skeleton2D/Base/Leg3/Leg3"]
modulate = Color(0.184314, 0.411765, 0.572549, 1)
offset_left = -62.0
offset_top = -200.0
offset_right = 62.0
offset_bottom = 200.0
color = Color(0, 0.145098, 0.352941, 1)

[node name="MeshInstance2D" type="MeshInstance2D" parent="Body3/Legs/Skeleton2D/Base/Leg3/Leg3"]
modulate = Color(0, 0.145098, 0.352941, 1)
position = Vector2(0.5, -134)
scale = Vector2(125, 125)
mesh = SubResource("CapsuleMesh_3dcq6")

[node name="MeshInstance2D2" type="MeshInstance2D" parent="Body3/Legs/Skeleton2D/Base/Leg3/Leg3"]
modulate = Color(0, 0.145098, 0.352941, 1)
position = Vector2(0.5, 138)
scale = Vector2(125, 125)
mesh = SubResource("CapsuleMesh_3dcq6")

[node name="Target1" type="Node2D" parent="Body3/Legs"]
top_level = true
position = Vector2(0, 811)
script = ExtResource("4_pwwrm")
turn = true
metadata/_edit_group_ = true

[node name="Timer" type="Timer" parent="Body3/Legs/Target1"]
wait_time = 0.3
autostart = true

[node name="Sprite2D" type="Sprite2D" parent="Body3/Legs/Target1"]
visible = false
texture = ExtResource("7_drxmw")

[node name="Target2" type="Node2D" parent="Body3/Legs"]
top_level = true
position = Vector2(0, 811)
script = ExtResource("4_pwwrm")
metadata/_edit_group_ = true

[node name="Timer" type="Timer" parent="Body3/Legs/Target2"]
wait_time = 0.6
autostart = true

[node name="Sprite2D" type="Sprite2D" parent="Body3/Legs/Target2"]
visible = false
texture = ExtResource("7_drxmw")

[node name="TargetHelper" type="Node2D" parent="Body3/Legs"]
position = Vector2(0, 811)
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="Body3/Legs/TargetHelper"]
visible = false
texture = ExtResource("7_drxmw")

[node name="Arm1" type="RigidBody2D" parent="."]
z_index = 1
position = Vector2(0, -312)
collision_layer = 5
collision_mask = 5
mass = 10.5
script = ExtResource("3_7vi1f")
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Arm1"]
position = Vector2(0, -63)
shape = SubResource("RectangleShape2D_i2hbv")

[node name="Line2D" type="Line2D" parent="Arm1"]
points = PackedVector2Array(0, -200, 0, 70)
width = 125.0
default_color = Color(0.207843, 0.878431, 0.615686, 1)
begin_cap_mode = 2
end_cap_mode = 2

[node name="Arm2" type="RigidBody2D" parent="."]
z_index = 1
position = Vector2(0, -41)
collision_layer = 5
collision_mask = 5
mass = 12.0
script = ExtResource("4_68ipt")
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Arm2"]
position = Vector2(0, -63)
shape = SubResource("RectangleShape2D_i2hbv")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Arm2"]
position = Vector2(0, 100)
shape = SubResource("CircleShape2D_tyxmv")
disabled = true

[node name="Line2D" type="Line2D" parent="Arm2"]
points = PackedVector2Array(0, -200, 0, 70)
width = 125.0
default_color = Color(0.207843, 0.878431, 0.615686, 1)
begin_cap_mode = 2
end_cap_mode = 2

[node name="MeshInstance2D" type="MeshInstance2D" parent="Arm2"]
modulate = Color(1, 0.882353, 0.792157, 1)
position = Vector2(0, 100)
scale = Vector2(155, 155)
mesh = SubResource("SphereMesh_fjaxu")

[node name="Hand" type="PinJoint2D" parent="Arm2"]
position = Vector2(0, 100)
node_a = NodePath("..")
angular_limit_enabled = true

[node name="Area2D" type="Area2D" parent="Arm2"]
position = Vector2(0, 100)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Arm2/Area2D"]
shape = SubResource("CircleShape2D_tyxmv")

[node name="Arm3" type="RigidBody2D" parent="."]
modulate = Color(0.8, 0.8, 0.8, 1)
z_index = -1
position = Vector2(0, -312)
collision_layer = 5
collision_mask = 5
mass = 10.5
script = ExtResource("3_7vi1f")
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Arm3"]
position = Vector2(0, -63)
shape = SubResource("RectangleShape2D_i2hbv")

[node name="Line2D" type="Line2D" parent="Arm3"]
points = PackedVector2Array(0, -200, 0, 70)
width = 125.0
default_color = Color(0.207843, 0.878431, 0.615686, 1)
begin_cap_mode = 2
end_cap_mode = 2

[node name="Arm4" type="RigidBody2D" parent="."]
modulate = Color(0.8, 0.8, 0.8, 1)
z_index = -1
position = Vector2(0, -41)
collision_layer = 5
collision_mask = 5
mass = 12.0
script = ExtResource("4_68ipt")
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Arm4"]
position = Vector2(0, -63)
shape = SubResource("RectangleShape2D_i2hbv")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Arm4"]
position = Vector2(0, 100)
shape = SubResource("CircleShape2D_tyxmv")
disabled = true

[node name="Line2D" type="Line2D" parent="Arm4"]
points = PackedVector2Array(0, -200, 0, 70)
width = 125.0
default_color = Color(0.207843, 0.878431, 0.615686, 1)
begin_cap_mode = 2
end_cap_mode = 2

[node name="MeshInstance2D" type="MeshInstance2D" parent="Arm4"]
modulate = Color(1, 0.882353, 0.792157, 1)
position = Vector2(0, 100)
scale = Vector2(155, 155)
mesh = SubResource("SphereMesh_fjaxu")

[node name="Hand" type="PinJoint2D" parent="Arm4"]
position = Vector2(0, 100)
node_a = NodePath("..")
angular_limit_enabled = true

[node name="Area2D" type="Area2D" parent="Arm4"]
position = Vector2(0, 100)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Arm4/Area2D"]
shape = SubResource("CircleShape2D_tyxmv")

[node name="PinJoint2D" type="PinJoint2D" parent="."]
position = Vector2(0, -601)
scale = Vector2(2, 2)
node_a = NodePath("../Head")
node_b = NodePath("../Body1")
disable_collision = false
softness = 0.05
script = ExtResource("5_qjvo7")

[node name="GPUParticles2D" parent="PinJoint2D" instance=ExtResource("6_mmb24")]
emitting = false

[node name="Sprite2D" type="Sprite2D" parent="PinJoint2D"]
visible = false
texture = ExtResource("7_drxmw")

[node name="PinJoint2D2" type="PinJoint2D" parent="."]
position = Vector2(0, -375)
scale = Vector2(2, 2)
node_a = NodePath("../Body1")
node_b = NodePath("../Body2")
disable_collision = false
softness = 0.05
script = ExtResource("5_qjvo7")

[node name="GPUParticles2D" parent="PinJoint2D2" instance=ExtResource("6_mmb24")]
emitting = false

[node name="PinJoint2D3" type="PinJoint2D" parent="."]
position = Vector2(0, -151)
scale = Vector2(2, 2)
node_a = NodePath("../Body2")
node_b = NodePath("../Body3")
disable_collision = false
softness = 0.05
script = ExtResource("5_qjvo7")

[node name="GPUParticles2D" parent="PinJoint2D3" instance=ExtResource("6_mmb24")]
emitting = false

[node name="PinJoint2D8" type="PinJoint2D" parent="."]
position = Vector2(0, -488)
node_a = NodePath("../Body1")
node_b = NodePath("../Arm1")
angular_limit_upper = 3.14159
script = ExtResource("5_qjvo7")

[node name="GPUParticles2D" parent="PinJoint2D8" instance=ExtResource("6_mmb24")]
emitting = false

[node name="PinJoint2D9" type="PinJoint2D" parent="."]
position = Vector2(0, -488)
node_a = NodePath("../Body1")
node_b = NodePath("../Arm3")
angular_limit_upper = 3.14159
script = ExtResource("5_qjvo7")

[node name="GPUParticles2D" parent="PinJoint2D9" instance=ExtResource("6_mmb24")]
emitting = false

[node name="PinJoint2D10" type="PinJoint2D" parent="."]
position = Vector2(0, -260)
node_a = NodePath("../Arm1")
node_b = NodePath("../Arm2")
angular_limit_enabled = true
angular_limit_upper = -1.5708
script = ExtResource("5_qjvo7")

[node name="GPUParticles2D" parent="PinJoint2D10" instance=ExtResource("6_mmb24")]
emitting = false

[node name="PinJoint2D11" type="PinJoint2D" parent="."]
position = Vector2(0, -260)
node_a = NodePath("../Arm3")
node_b = NodePath("../Arm4")
angular_limit_enabled = true
angular_limit_upper = -1.5708
script = ExtResource("5_qjvo7")

[node name="GPUParticles2D" parent="PinJoint2D11" instance=ExtResource("6_mmb24")]
emitting = false

[node name="Timer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="Config" type="Node2D" parent="."]
script = ExtResource("8_uxme2")
description = "Wtf are you doing with the player ?"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Config"]
stream = ExtResource("9_s1nsl")

[node name="PinJoint2D7" type="PinJoint2D" parent="."]
position = Vector2(0, 424)
scale = Vector2(2, 2)
node_a = NodePath("../Leg3")
node_b = NodePath("../Leg4")
softness = 0.05
angular_limit_enabled = true
angular_limit_upper = 1.5708
script = ExtResource("5_qjvo7")

[node name="GPUParticles2D" parent="PinJoint2D7" instance=ExtResource("6_mmb24")]
emitting = false

[connection signal="timeout" from="Body3/Legs/Target1/Timer" to="Body3/Legs/Target1" method="_on_timer_timeout"]
[connection signal="timeout" from="Body3/Legs/Target2/Timer" to="Body3/Legs/Target2" method="_on_timer_timeout"]
[connection signal="body_entered" from="Arm2/Area2D" to="Arm2" method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Arm2/Area2D" to="Arm2" method="_on_area_2d_body_exited"]
[connection signal="body_entered" from="Arm4/Area2D" to="Arm4" method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Arm4/Area2D" to="Arm4" method="_on_area_2d_body_exited"]
[connection signal="timeout" from="Timer" to="Head" method="_on_timer_timeout"]
